2008-03-10  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: vinagre, evolution, evolution-data-server,
	evolution-exchange and gtkhtml branched for 2.22.

2008-03-10  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: totem-pl-parser, zenity and eog branched for 2.22.

2008-03-06  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: epiphany{-extensions} branched for 2.22.

2008-03-05  Claude Paroz  <claude@2xlibre.net>

	* templates/module.tmpl: Testing the stringfrozen property against 'true'
	(string value). Thanks to Marcel Telka for catching this.

2008-03-04  Claude Paroz  <claude@2xlibre.net>

	* REQUIREMENTS: Added intltool minimal requirement.
	* defaults.py: Paths update.
	* releases.xml.in: Sodipodi removed from Extra release.

2008-03-04  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Icelandic web page without entities.

2008-03-04  Danilo Šegan  <danilo@gnome.org>

	* Makefile: Fix a dependant rule for po/C/*.xml as well.

2008-03-03  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Totem branched for 2.22.

2008-03-03  Claude Paroz  <claude@2xlibre.net>

	* Makefile: Corrected path from 'po' to 'po/C'.
	* people.xml.in:
	* translation-teams.xml.in: Icelandic team coordinator change.

2008-03-01  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Adapted release notes module to new infrastructure.

2008-02-29  Danilo Šegan  <danilo@gnome.org>

	* data.py (readFromFile): use 'po/C/' as default path for
	multi-merge (because of intltool change).

	* potdiff.py (_parse_contents): Fix crash when empty contents.

2008-02-28  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Accerciser branched for gnome-2-22.

2008-02-27  Johannes Schmid <jhs@gnome.org>
	
	* people.xml.in:
	* translation-teams.xml:
	Changed "cs" team coordinator to Petr Kovář
