@@ -569,7 +569,7 @@
       <module id="gconf-editor"/>
       <module id="gdm" branch="gnome-2-20"/>
       <module id="gedit"/>
-      <module id="gnome-applets"/>
+      <module id="gnome-applets" branch="gnome-2-22"/>
       <module id="gnome-backgrounds"/>
       <module id="gnome-control-center"/>
       <module id="gnome-desktop"/>
